# spodcat-backend

./: .flake8  .gitignore  .gitmodules  MANIFEST.in  README.md  legacy.md  package-lock.json  package.json  published.json  pull-and-reload  pyproject.toml  tsconfig.json  uwsgi.ini
src/: admin_mixin.py  asgi.py  manage.py  model_mixin.py  serve_media.py  settings.py  urls.py  wsgi.py
src/assets/css/: admin.css  martor.css
src/assets/js/: admin.js  admin.js.map  artist_autocomplete.js.map  chart.js  chart.js.map  episode_song.js
src/assets/scss/: admin.scss  martor-extra.scss  martor.scss  stats.scss
src/assets/ts/: admin.ts  artist_autocomplete.ts  chart.ts  charts.ts  font_face.ts  stats.ts
src/formats/en/: formats.py
src/logs/: admin.py  ip_check.py  models.py  querysets.py  user_agent.py  utils.py  widgets.py
src/logs/migrations/: 0001_initial.py  0002_initial.py  0002_podcastcontentrequestlog_path_info_and_more.py  0003_alter_podcastrssrequestlog_options.py  0003_alter_useragent_user_agent.py  0003_podcastcontentaudiorequestlog_device_category_and_more.py  0003_podcastcontentaudiorequestlog_rss_user_agent_slug.py  0003_podcastrssrequestlog.py  0003_remove_podcastcontentaudiorequestlog_remote_host_and_more.py  0004_alter_podcastcontentaudiorequestlog_created_and_more.py  0004_alter_podcastcontentaudiorequestlog_remote_addr_category_and_more.py  0004_alter_podcastcontentrequestlog_options_and_more.py  0004_alter_requestlog_user_agent.py  0004_podcastrssrequestlog2.py  0004_remove_podcastcontentaudiorequestlog_rss_user_agent_slug_and_more.py  0005_alter_podcastcontentaudiorequestlog_table_and_more.py  0005_alter_podcastcontentaudiorequestlog_user_agent_type_and_more.py  0005_alter_requestlog_referrer.py  0005_migrate_rss_logs.py  0005_podcastcontentaudiorequestlog.py  0005_rename_referer_podcastcontentaudiorequestlog_referrer_and_more.py  0006_alter_podcastcontentaudiorequestlog_response_body_size.py  0006_alter_podcastcontentaudiorequestlog_rss_user_agent_type.py  0006_delete_podcastrssrequestlog.py  0006_podcastcontentaudiorequestlog_podcast.py  0006_rename_podcastcontentaudiorequestlog_podcastcontentaudiorequestlog2_and_more.py  0007_alter_podcastcontentaudiorequestlog2_episode_and_more.py  0007_alter_podcastcontentrequestlog_created_and_more.py  0007_podcastcontentaudiorequestlog_user_agent_name_and_more.py  0007_remove_podcastcontentaudiorequestlog_content_and_more.py  0007_rename_podcastrssrequestlog2_podcastrssrequestlog.py  0008_alter_podcastcontentaudiorequestlog_created.py  0008_geoip_useragent_requestlog_podcastcontentrequestlog_and_more.py  0008_remove_podcastcontentaudiorequestlog_rss_user_agent_type_and_more.py  0009_geoip_hostname.py  0010_auto_20250422_2218.py  0011_alter_requestlog_geoip_and_more.py  0012_remove_podcastcontentrequestlog2_content_and_more.py  0013_remove_geoip_hostname_requestlog_remote_host.py  0014_remove_podcastepisodeaudiorequestlog_rss_request_log_and_more.py  (+6 more)
src/podcasts/: admin.py  admin_inlines.py  admin_site.py  apps.py  fields.py  forms.py  models.py  podcasting2.py  querysets.py  serializers.py  signals.py  user_agent.py  utils.py  validators.py  views.py  widgets.py
src/podcasts/migrations/: 0001_initial.py  0002_alter_podcast_banner_alter_podcast_categories_and_more.py  0002_episode_season_alter_podcast_banner_and_more.py  0002_initial.py  0002_populate_categories.py  0003_alter_comment_name_alter_podcast_name_font_family.py  0003_alter_episode_options_podcast_favicon_and_more.py  0003_alter_podcastcontent_options_and_more.py  0003_alter_podcastcontent_slug.py  0003_alter_podcastlink_theme.py  0003_artist_episodesong.py  0003_comment.py  0003_episode_image_episode_image_height_and_more.py  0004_alter_podcastcontent_published.py  0004_challenge.py  0004_podcast_cover_thumbnail_height_and_more.py  0004_podcast_guid.py  0004_podcast_name_font_family_podcast_name_font_size.py  0004_post.py  0004_remove_episode_id_alter_episode_description_and_more.py  0005_alter_comment_options_podcast_enable_comments_and_more.py  0005_alter_episode_number.py  0005_alter_podcast_name_font_size.py  0005_podcast_cover_mimetype_and_more.py  0006_alter_episodesong_timestamp.py  0006_alter_podcast_owner.py  0006_podcast_owner_alter_podcast_owners.py  0007_episodechapter.py  0007_rename_owners_podcast_authors.py  0008_alter_episode_image_alter_episode_image_thumbnail.py  0008_alter_episodesong_options_and_more.py  0009_alter_podcast_banner_alter_podcast_cover_and_more.py  0009_rename_name_episodesong_title.py  0010_episodesong_end_time_episodesong_image_and_more.py  0011_alter_episodechapter_url_alter_episodesong_url.py
src/podcasts/models/: __init__.py  artist.py  category.py  challenge.py  comment.py  episode.py  episode_chapter.py  episode_song.py  fields.py  podcast.py  podcast_content.py  podcast_link.py  post.py
src/podcasts/serializers/: __init__.py  artist.py  category.py  challenge.py  comment.py  episode.py  episode_song.py  podcast.py  podcast_content.py  podcast_link.py  post.py
src/podcasts/views/: __init__.py  admin.py  challenge.py  comment.py  episode.py  podcast.py  podcast_content.py  podcast_link.py  post.py
src/spodcat/: admin.py  admin_inlines.py  admin_site.py  apps.py  form_fields.py  forms.py  ip_check.py  logging.py  model_mixin.py  serve_media.py  settings.py  signals.py  types.py  urls.py  user_agent.py  utils.py  validators.py  widgets.py
src/spodcat/admin/: __init__.py  inlines.py  logs.py  mixins.py  podcasts.py  user.py
src/spodcat/logs/: admin.py  apps.py  chart_data.py  graph_data.py  ip_check.py  models.py  querysets.py  user_agent.py
src/spodcat/migrations/: 0001_initial.py  0002_alter_podcast_categories_and_more.py  0002_fontface.py  0003_alter_episode_audio_file_alter_episode_image_and_more.py  (+8 more)
src/test_env/: models.py
src/users/: admin.py  models.py  serializers.py  views.py
src/utils/: __init__.py  admin_mixin.py  fields.py  filters.py  form_fields.py  model_fields.py  widgets.py
typings/polymorphic/: managers.pyi  query.pyi
typings/rest_framework_json_api/: serializers.pyi  views.pyi
(+109 files in other folders)
