[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
version = "0.5.0"
name = "spodcat-backend"
authors = [
    {name = "Robert Huselius", email = "robert@huseli.us"},
]
description = ""
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "country_list",
    "django-polymorphic",
    "django",
    "djangorestframework-jsonapi[django-polymorphic,django-filter]",
    "djangorestframework",
    "feedgen",                  # generating RSS feed
    "feedparser",               # importing RSS feed
    "geoip2",                   # used to get geo data for remote IPs
    "iso639-lang",              # getting language choices for podcast
    "klaatu-django@https://github.com/Eboreg/klaatu-django/archive/refs/heads/master.zip",
    "markdownify",              # convert HTML to Markdown when importing RSS feed
    "martor",                   # Markdown editor for admin
    "pillow",                   # thumbnail generation
    "pydub",                    # generating dBFS arrays and normalising
    "python-dateutil",
    "python-slugify",           # generating slugs for podcast content
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
    "django-extensions",
    "django-storages[azure]",
    "django-stubs",
    "djangorestframework-stubs",
    "flake8",
    "ipdb",
    "ipython",
    "isort",
    "psycopg[binary]",
    "pylint-django",
    "pylint",
    "python-dotenv",
    "types-markdown",
    "types-requests",
    "whitenoise",
]

[project.scripts]
m = "manage:main"

[tool.pylint.main]
disable = [
    "broad-exception-caught",
    "import-outside-toplevel",
    "invalid-name",
    "invalid-str-returned",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unused-argument",
]
ignore = [".venv", "node_modules"]
ignore-patterns = ["^\\.#", ".*\\.pyi", "apps\\.py"]
ignore-paths = [".*migrations.*"]
max-line-length = 119

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
multi_line_output = 3
lines_after_imports = 2
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [".venv", "node_modules", "build"]

[tool.mypy]
follow_imports = "skip"
show_error_codes = true
ignore_missing_imports = true
files = "."
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ["*.migrations.*"]

[tool.pyright]
exclude = ["**/__pycache__", "node_modules", "build", "**/migrations", "**/.*", ".venv"]
typeCheckingMode = "basic"
ignore = [".venv"]
stubPath = "typings"
include = ["src"]
